# MiCRA

./: .gitignore  .vercelignore  AGENTS.md  MAINTENANCE.md  PHASE1_COMPLETE.md  README.md  TEST_RESULTS_SUMMARY.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VIDEO_GENERATION_PIPELINE.md  boundary-manifest.md  cartography-map.md  cartography-plan.md  package-lock.json  validation-report.md
backend/: AGENTS.md  GEMINI_ROTATION_SETUP.md  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  standard_dictionary.json  vercel.json  vertex_test.py
backend/app/: main.py
backend/app/agents/: AGENTS.md
backend/app/api/: AGENTS.md  routes.py
backend/app/auth/: AGENTS.md  (+1 more)
backend/audio-transcription/: audio-transcription.py
backend/audio_transcription/: AGENTS.md  api_audio.py  audio_transcription.py  setup.md
backend/image-analysis-solo/: analyze_frame.py  readme.me  requirements.txt
backend/migrations/: 001_secure_isolation.sql  create_executions_table.sql  create_workflow_run_outputs_table.sql
backend/scene_detection/: scene_detection.py
backend/scripts/: dev_register_assets.py  dev_run_generate_video.py  run_video_with_assets.sh  verify_isolation.py
backend/tests/: test_gemini_rotation.py  test_media_persistence.py  test_phash.py  test_template_compilation.py  test_text_generation_prompt.py  test_type_safety_fixes.py  test_video_generation.py  test_workflow_copilot_build_steps.py  test_workflow_copilot_graph_preferences.py  test_workflow_copilot_planning.py  test_workflow_executor_parallel.py  test_workflows.py  test_workflows_performance.py
(+342 files in other folders)
