[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "asyncpg>=0.31.0",
    "boto3>=1.42.34",
    "cachetools>=6.2.4",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "exceptiongroup>=1.3.1",
    "fastapi[standard]>=0.128.0",
    "fireworks-ai>=0.19.20",
    "google-auth>=2.47.0",
    "google-genai>=1.57.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "pillow>=12.1.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "sniffio>=1.3.1",
    "starlette>=0.50.0",
    "supabase>=2.27.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
